# ChangeLog for x11-misc/gxmessage
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/gxmessage/ChangeLog,v 1.23 2007/08/02 12:52:59 uberlord Exp $

  02 Aug 2007; Roy Marples <uberlord@gentoo.org> gxmessage-2.6.2.ebuild:
  Keyworded ~x86-fbsd, #156902 thanks to Marc Kowarsky.

*gxmessage-2.6.2 (07 Jun 2007)

  07 Jun 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +gxmessage-2.6.2.ebuild:
  Version bump, see bug #181136.

  23 Oct 2006; David Shakaryan <omp@gentoo.org> gxmessage-2.6.1.ebuild:
  RDEPEND should not include dev-util/pkgconfig.

  20 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  -gxmessage-2.4.4.ebuild:
  Remove old version.

  20 Oct 2006; Simon Stelling <blubb@gentoo.org> gxmessage-2.6.1.ebuild:
  stable on amd64

  12 Oct 2006; Emanuele Giaquinta <exg@gentoo.org> gxmessage-2.6.1.ebuild:
  Stable on ppc; bug #150821

  11 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  gxmessage-2.6.1.ebuild:
  Stable on sparc wrt #150821

  11 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> gxmessage-2.6.1.ebuild:
  Add missing dev-util/pkgconfig to DEPEND, stable on x86. See bug #150821.

*gxmessage-2.6.1 (27 May 2006)

  27 May 2006; Krzysiek Pawlik <nelchael@gentoo.org>
  +gxmessage-2.6.1.ebuild:
  Version bump, see bug #134189.

  12 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> gxmessage-2.4.4.ebuild:
  Fixed DEPEND for modular X.

  01 Dec 2005; Jason Wever <weeve@gentoo.org> gxmessage-2.4.4.ebuild:
  Stable on SPARC wrt bug #111131.

  02 Nov 2005; Luis Medinas <metalgod@gentoo.org> gxmessage-2.4.4.ebuild:
  Marked Stable on amd64. Bug #111131.

  01 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org>
  -gxmessage-2.0.11.ebuild, gxmessage-2.4.4.ebuild:
  Fixed dodoc not to install COPYING and/or INSTALL.

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  gxmessage-2.4.4.ebuild:
  Stable on ppc.

  16 Jul 2005; Jonathan Smith <smithj@gentoo.org> gxmessage-2.4.4.ebuild:
  stable x86
