@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/gxmessage/Attic/gxmessage-2.6.2.ebuild,v 1.3 2007/08/02 12:52:59 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/gxmessage/Attic/gxmessage-2.6.2.ebuild,v 1.4 2008/03/23 10:52:09 opfer Exp $
 
 DESCRIPTION="A GTK2 based xmessage clone"
 HOMEPAGE="http://homepages.ihug.co.nz/~trmusson/programs.html#gxmessage"
@@ -8,7 +8,7 @@ SRC_URI="http://homepages.ihug.co.nz/~trmusson/stuff/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~amd64 ~ppc ~sparc x86 ~x86-fbsd"
 IUSE=""
 
 RDEPEND=">=x11-libs/gtk+-2.6"
